Beginning of long polling

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ function loglevel(el, replace)
          <div data-routeuser class="uk-container uk-margin-top uk-margin-bottom">
             <h1 data-title=".textContent" class="uk-inline"></h1>
             <img data-avatar="src" class="uk-align-right avatar">
-            <p data-content=".textContent" class="uk-text-break"></p>
+            <p data-content=".renderContent" class="uk-text-break"></p>
          </div>
       </div>
       <!-- LOC:CONTROLS -->
