Attempt to recover from bad long poller pt1

--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@ function loglevel(el, replace)
                   </h3>
                   <div id="fileuploadslideshow" uk-slideshow uk-margin>
                      <ul id="fileuploaditems" class="uk-slideshow-items"></ul>
-                     <div><ul id="fileuploadthumbnails" class="uk-thumbnav" uk-margin></ul></div>
+                     <div><ul id="fileuploadthumbnails" class="uk-thumbnav uk-flex-center" 
+                           uk-margin></ul></div>
                      <div uk-margin>
                         <a id="fileuploadnewer" href="#" hidden>Newer</a>
                         <a id="fileuploadolder" class="uk-align-right" href="#" hidden>Older</a>
