Image uploading in chat

--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@ function loglevel(el, replace)
                   <ul id="discussions" class="uk-flex-1 uk-switcher" uk-overflow-auto>
                      <!-- Everything in here are the in-memory discussions -->
                   </ul>
-                  <div id="postarea" class="uk-flex" data-utgl hidden>
+                  <div id="postarea" class="uk-inline" data-utgl hidden>
                      <textarea id="postdiscussiontext" 
-                        class="uk-flex-1 uk-textarea"></textarea>
+                        class="uk-flex-1 uk-textarea uk-width-expand uk-height-1-1"></textarea>
+                     <a href="#" uk-toggle="target: #fileupload" uk-icon="image"
+                        class="uk-position-bottom-right" id="discussionimageselect"></a>
                   </div>
                </div>
             </div>
