Nav url things work

--- a/index.html
+++ b/index.html
@@ -457,6 +457,8 @@ function loglevel(el, replace)
          <li data-breadcrumb>
             <a data-link="href" data-spa data-text=".textContent"></a>
          </li>
+         <a data-sbslink data-link="href" data-spa>
+         </a>
          <!-- LOC:ROUTES -->
          <div data-routehome>
             <p>This is a lot of text. i am hoping it will continue so long
