Easier long polling because login reloads

--- a/index.html
+++ b/index.html
@@ -462,9 +462,10 @@ function loglevel(el, replace)
          <!-- LOC:ROUTES -->
          <div data-routehome class="uk-container uk-margin-top uk-margin-bottom">
             <h1>SmileBASIC Source</h1>
-            <p>A website for making BASIC programs in SmileBASIC! 
-            This website is in development! There's a lot of missing
-            features, but we're gonna keep adding stuff until it's good!</p>
+            <p>A community for talking about SmileBASIC, where you can create 
+            BASIC programs on your Nintendo 3DS, Wii U, and Switch! 
+            This website is in development! There's a lot of missing features, 
+            but we're gonna keep adding stuff until it's good!</p>
             <h3><a href="?p=category-0" data-spa>Browse</a></h3>
             <a href="#" uk-toggle="#hometestarea">Test area</a>
             <div id="hometestarea" hidden>
