Watches clear/delete update sidebar

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ function loglevel(el, replace)
          <li data-fupthumb data-id="" data-number="uk-slideshow-item"><a href="#">
             <img data-src="src" width="60" alt=""></a></li>
          <!-- PW is the dual pulse-watch element (formatting is nearly identical) -->
-         <li data-pw>
+         <li data-pw data-contentid="">
             <div class="uk-flex uk-flex-middle">
                <a data-pwlink="href" class="uk-flex-1 uk-text-truncate uk-text-emphasis" 
                   data-spa data-pwname=".textContent"></a>
