Can't decide on user sidebar format

--- a/index.html
+++ b/index.html
@@ -240,24 +240,30 @@ function loglevel(el, replace)
                            </div>
                            <hr>
                            <div uk-margin class="uk-margin-bottom">
+                              <h4 class="ufk-text-meta">Account Settings</h4>
                               <a href="" id="userchangeavatar" uk-toggle="target: #fileupload" 
                                  class="uk-display-block">Change Avatar</a>
                               <a href="#" id="userinvalidatesessions" 
                                  class="uk-display-block">Invalidate All Sessions</a>
                            </div>
-                           <div uk-margin class="uk-margin-bottom">
-                              <div class="uk-heading-divider">Notifications</div>
+                           <hr>
+                           <div uk-margin>
+                              <h4 class="ufk-text-meta">Device Settings</h4>
                               <button id="allowNotifications" 
                                     class="uk-button uk-button-default">Permit Notifications</button>
-                              <!--<label class="uk-display-block"><input type="checkbox" class="uk-checkbox">
-                                 Chat notifications (does nothing)</label>-->
-                           </div>
-                           <!--<div>
-                              <label>Image resolution (data save): <input id="userimagescale"></input></label>
-                           </div>-->
-                           <div uk-margin class="uk-margin-bottom">
-                              <div class="uk-heading-divider">Other</div>
                               <button id="userlogout" class="uk-button uk-button-default">Logout</button>
+                              <!--<div uk-margin class="uk-margin-bottom">
+                                 <div
+                                 class="uk-heading-divider">Notifications</div>-->
+                                 <!--<label class="uk-display-block"><input type="checkbox" class="uk-checkbox">
+                                    Chat notifications (does nothing)</label>-->
+                                 <!--</div>-->
+                              <!--<div>
+                                 <label>Image resolution (data save): <input id="userimagescale"></input></label>
+                              </div>-->
+                              <!--<div uk-margin class="uk-margin-bottom">
+                                 <div class="uk-heading-divider">Other</div>
+                              </div>-->
                            </div>
                         </div>
                      </div>
